--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <body>
     <div class="container">
         <div id="home" class="flex-column flex-center">
-            <h1>NCP [202] CBT</h1>
-            <a href="game.html" class="btn"> 시작하기</a>
+            <h1>CBT</h1>
+            <a href="game1.html" class="btn"> 200. OverView</a>
+			<a href="game2.html" class="btn"> 202. Network</a>
+			<a href="game3.html" class="btn"> 207. Troubleshooting</a>
         </div>
     </div>
 </body>
