--- a/end.html
+++ b/end.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div id="end" class="flex-center flex-column">
             <h1 id="finalScore">0</h1>
-            <a href="game.html" class="btn">다시하기</a>
+            <a href="index.html" class="btn">다시하기</a>
         </div>
     </div>
     <script src="end.js"></script>
